tests/negative/ambiguous_b.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

foo:
  return "b"

bar := 0

class AmbiguousC:
